# legal-basis-api

./: .bandit  .cfignore  .codeclimate.yml  .coveragerc  .gitignore  .yamllint.yml  Makefile  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  manifest.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  runtime.txt  setup.cfg  start.sh
.circleci/: config.yml
config/: .env.template  sample.env
docker/: ci.sh  docker-compose.prod.yml
docker/django/: Dockerfile  gunicorn.sh
docs/: Consent Service.postman_collection.json  conf.py  development.md  django.md  linters.md  overview.md  security.md  testing.md
docs/diagrams/: DIT Consent architecture.vsdx
docs/pages/template/: development.md  django.md  linters.rst  overview.md  production-checklist.md
server/: urls.py
server/apps/admin_export/: urls.py  views.py
server/apps/api/: apps.py  serializers.py  urls.py
server/apps/api/views/: legal_basis.py  schema.py
server/apps/main/: __init__.py  admin.py  apps.py  auth.py  feeds.py  middleware.py  models.py  permissions.py  signals.py  urls.py  views.py
server/apps/main/logic/: __init__.py
server/apps/main/management/commands/: example.csv  import_email_consent.py
server/apps/main/migrations/: 0001_initial.py  0002_auto_20200117_1121.py  0002_auto_20200218_1028.py  0003_consent_initial_data.py  0003_legalbasiscurrent.py  0004_legalbasiscurrent.py  0005_auto_20200325_1554.py  0006_create_case_insensitive_collation.py  0007_alter_commit_extra_alter_legalbasis_email.py
server/apps/main/static/main/css/: index.css
server/apps/main/templates/main/: index.html
server/apps/poller/: apps.py  clients.py  models.py
server/apps/poller/api_client/: activity.py  adobe.py  dynamics.py  maxemail.py
server/apps/poller/management/commands/: poll_adobe_campaign.py  poll_dynamics.py  poll_formsapi.py  poll_formsapi_rerun.py  poll_maxemail.py
server/apps/poller/migrations/: 0001_initial.py  0002_auto_20200217_1127.py  0003_adobecampaign.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  drf.py  logging.py
server/settings/environments/: default.py  development.py  production.py  test.py
server/templates/admin/: change_list_csv_export.html  login.html
server/templates/txt/: humans.txt
sql/: create_database.sql  drop_database.sql
test-results/pytest/: results.xml
tests/: conftest.py
tests/test_apps/test_main/test_middleware/: test_audit_log_middleware.py
tests/test_apps/test_main/test_models/: test_blog_post_model.py  test_legal_basis_model.py
tests/test_apps/test_main/test_models/test_migrations/: test_blog_post_migrations.py
tests/test_apps/test_main/test_views/: test_hawk_auth.py  test_index_view.py  test_legal_basis_viewset.py
tests/test_apps/test_poller/test_clients/: test_dynamics.py  test_maxemail.py
tests/test_apps/test_poller/test_managment_commands/: test_poll_adobe.py  test_poll_dynamics.py  test_poll_formsapi.py  test_poll_maxemail.py
tests/test_server/: test_urls.py
